--- a/Day 06/homework.html
+++ b/Day 06/homework.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <img src="https://scontent.ftbs6-2.fna.fbcdn.net/v/t1.15752-9/477025371_1842244086589543_7370279315989437407_n.jpg?stp=dst-jpg_p480x480_tt6&_nc_cat=107&ccb=1-7&_nc_sid=0024fc&_nc_ohc=SdZFrDUwDPwQ7kNvgFZnP-w&_nc_oc=Adj1ClDMmWvLlR1TvUfAWHn5vyjw99ykQh4A3A8j1XzuMmifEzW1AgPnL9g4vT3bv9g&_nc_zt=23&_nc_ht=scontent.ftbs6-2.fna&oh=03_Q7cD1gFg2EJI4meY2i65p_1ZEE0RJxp4BNnmojQQ_15cl__jGQ&oe=67DD0635">
+    <img src="https://scontent.ftbs6-2.fna.fbcdn.net/v/t1.15752-9/477550290_975911714505338_5875924852391425554_n.jpg?stp=dst-jpg_p480x480_tt6&_nc_cat=109&ccb=1-7&_nc_sid=0024fc&_nc_ohc=k4v2IkD6UZUQ7kNvgE5nfog&_nc_oc=AdjAYfIt6cNWjz5wlPzyPx2fPcqvqQ8kYGKJuxS7jWUPdxD5HjbrK8QEtXHIWZ4cJjE&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent.ftbs6-2.fna&oh=03_Q7cD1gGlmOV4C31hRrtOpVNpz_mtN8uQDCSC9o9lJAdDPXvyEA&oe=67DD2664">
 </body>
 </html>
